--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "mongoose": "^6.10.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.10.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.8",
+    "uuid": "^9.0.1"
   }
 }
